# rptp

./: .dockerignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  LICENSE-MIT  LICENSING.md  NOTICE  README.md  SECURITY.md  rustfmt.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  question.md
.github/workflows/: ci.yml
crates/grafana-prometheus-demo/: Cargo.toml  Dockerfile  docker-compose.yml  prometheus.yml
crates/grafana-prometheus-demo/grafana/dashboards/: dashboard.yml  rptp-dash.json
crates/grafana-prometheus-demo/grafana/datasources/: datasource.yml
crates/grafana-prometheus-demo/src/: loopback.rs  main.rs  metrics.rs  node.rs
crates/rptp/: Cargo.toml
crates/rptp-daemon/: Cargo.toml
crates/rptp-daemon/src/: clock.rs  lib.rs  log.rs  main.rs  net.rs  node.rs  ordinary.rs  timestamping.rs  virtualclock.rs
crates/rptp-daemon/tests/: fake_boundary.rs
crates/rptp-embedded-demo/: Cargo.toml  README.md  build.rs
crates/rptp-embedded-demo/.cargo/: config.toml
crates/rptp-embedded-demo/src/: main.rs  net.rs
crates/rptp/src/: bmca.rs  buffer.rs  clock.rs  e2e.rs  faulty.rs  heapless.rs  infra.rs  initializing.rs  lib.rs  listening.rs  log.rs  master.rs  message.rs  node.rs  offsets.rs  ordinary.rs  passive.rs  port.rs  portstate.rs  premaster.rs  profile.rs  result.rs  servo.rs  slave.rs  sync.rs  test_support.rs  time.rs  timestamping.rs  uncalibrated.rs  wire.rs
docs/: architecture-overview.md  design-philosophy.md
tests/e2e/: Cargo.toml
tests/e2e/docker/: Dockerfile  ptp4l.Dockerfile  qemu.Dockerfile
tests/e2e/scenarios/: Cargo.toml
tests/e2e/scenarios/delay_request_response_roundtrip/master/: Cargo.toml
tests/e2e/scenarios/delay_request_response_roundtrip/slave/: Cargo.toml
tests/e2e/scenarios/delay_request_response_roundtrip/slave/src/: main.rs
tests/e2e/scenarios/master_sends_periodic_sync_follow_up/master/: Cargo.toml
tests/e2e/scenarios/master_sends_periodic_sync_follow_up/slave/: Cargo.toml
tests/e2e/scenarios/master_sends_periodic_sync_follow_up/slave/src/: main.rs
tests/e2e/scenarios/master_slave_sync_delay_roundtrips/: Cargo.toml
tests/e2e/scenarios/master_slave_sync_delay_roundtrips/src/: master.rs  slave.rs
tests/e2e/scenarios/ptp4l_slave_syncs_to_master/: Cargo.toml
tests/e2e/scenarios/ptp4l_slave_syncs_to_master/src/: main.rs
tests/e2e/scenarios/slave_syncs_to_master/: Cargo.toml
tests/e2e/scenarios/slave_syncs_to_master/src/: master.rs  slave.rs
tests/e2e/scenarios/slave_syncs_to_ptp4l_master/: Cargo.toml
tests/e2e/scenarios/slave_syncs_to_ptp4l_master/src/: main.rs
tests/e2e/scenarios/sync_follow_up_roundtrip/master/: Cargo.toml
tests/e2e/scenarios/sync_follow_up_roundtrip/master/src/: main.rs
tests/e2e/scenarios/sync_follow_up_roundtrip/slave/: Cargo.toml
tests/e2e/scenarios/sync_follow_up_roundtrip/slave/src/: main.rs
tests/e2e/src/: lib.rs
tests/e2e/tests/: delay_request_response_roundtrip.rs  master_sends_periodic_sync_follow_up.rs  master_slave_sync_delay_roundtrips.rs  ptp4l_slave_syncs_to_master.rs  ptp4l_slave_syncs_to_qemu_master.rs  slave_syncs_to_master.rs  slave_syncs_to_ptp4l_master.rs  sync_follow_up_roundtrip.rs
