[package]
name = "grafana-prometheus-demo"
version = "0.1.0"
edition = "2024"
publish = false
license = "MIT OR Apache-2.0"
repository = "https://github.com/mcsquared/rptp"

[dependencies]
rptp = { path = "../rptp", features = ["infra"] }
rptp-daemon = { path = "../rptp-daemon" }
tokio = { version = "1", features = ["full"] }
prometheus = "0.14"
tracing = "0.1"
