[package]
name = "rptp-daemon"
version = "0.1.0"
edition = "2024"
description = "An experimental Tokio-based infrastructure layer integrating the rptp core for IEEE 1588 PTP experiments."
license = "MIT OR Apache-2.0"
repository = "https://github.com/mcsquared/rptp"
homepage = "https://github.com/mcsquared/rptp"
readme = "../../README.md"
keywords = ["ptp", "ieee1588", "daemon", "time", "networking"]
categories = ["date-and-time", "network-programming"]
rust-version = "1.89"

[dependencies]
rptp = { path = "../rptp", features = ["test-support"] }
