[package]
name = "rptp-embedded-demo"
version = "0.1.0"
edition = "2024"
publish = false
license = "MIT OR Apache-2.0"
repository = "https://github.com/mcsquared/rptp"

[[bin]]
name = "rptp-embedded-demo"
path = "src/main.rs"
test = false
bench = false

[dependencies]
cortex-m = "0.7"
cortex-m-rt = "0.7"
panic-halt = "1.0"
cortex-m-semihosting = "0.5"
smoltcp = { version = "0.12", default-features = false, features = ["proto-ipv4", "socket-udp", "medium-ethernet", "multicast"] }
heapless = "0.9"

rptp = { path = "../rptp", default-features = false, features = ["heapless-storage"] }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"

[profile.dev]
panic = "abort"