[package]
name = "rptp-e2e-tests"
version = "0.1.0"
edition = "2024"
publish = false
license = "MIT OR Apache-2.0"
repository = "https://github.com/mcsquared/rptp"

[dependencies]
tokio = { version = "1", features = ["full"] }
bollard = "0.19"
testcontainers = "0.25"
tar = "0.4"
anyhow = "1.0"
bytes = "1"
futures = "0.3"
futures-core = "0.3"
uuid = { version = "1", features = ["v4"] }
sha2 = "0.10"
